<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.screens.shoedetail.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bound_background"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        tools:context=".screens.shoedetail.ShoeDetailFragment">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:hint="@string/shoe_name_hint_txt"
            android:text="@={shoeDetailViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_company_hint_txt"
            android:text="@={shoeDetailViewModel.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <EditText
            android:id="@+id/edtSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_size_hint_txt"
            android:inputType="numberDecimal"
            android:text="@={shoeDetailViewModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCompany" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_description_hint_txt"
            android:text="@={shoeDetailViewModel.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSize" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonCustomStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="24dp"
            android:text="@string/btn_cancel"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="@+id/edtDescription"
            app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonCustomStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/btn_save"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCancel"
            app:layout_constraintEnd_toEndOf="@+id/edtDescription"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>