<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bound_background"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".screens.login.LoginFragment">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_large"
            android:layout_marginTop="@dimen/margin_top_biggest"
            android:layout_marginEnd="@dimen/margin_start_large"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_end_largest"
            android:layout_marginTop="@dimen/margin_end_small"
            android:layout_marginEnd="@dimen/margin_end_largest"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonCustomStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_top_largest"
            android:layout_marginTop="@dimen/margin_end_large"
            android:layout_marginEnd="@dimen/margin_top_largest"
            android:layout_marginBottom="@dimen/margin_bottom_largest"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtpassword"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>