<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bound_background"
        tools:context=".screens.onbroarding.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/TvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_large"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:text="@string/welcome_txt"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TvWelcomeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_large"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:text="@string/welcome_you_to_shoe_app"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TvWelcome" />

        <Button
            android:id="@+id/btnLetsGo"
            style="@style/ButtonCustomStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_large"
            android:text="@string/lest_go_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TvWelcomeDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>